--- a/kafka/docker-compose.yml
+++ b/kafka/docker-compose.yml
@@ -3,12 +3,26 @@ services:
   zookeeper:
     image: wurstmeister/zookeeper:latest
     container_name: zookeeper
+    hostname: zookeeper
     ports: 
       - "2181:2181"
+    networks: 
+      kafka_net:
   kafka:
     image: wurstmeister/kafka:2.12-2.4.1
+    container_name: kafka
+    hostname: kafka
     ports: 
       - "9092:9092"
+    depends_on: 
+      - zookeeper
     environment: 
-      KAFKA_ADVERTISED_HOST_NAME: localhost
+      KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_ADVERTISED_HOST_NAME: kafka
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+    volumes: 
+      - ./.docker/kafka:/kafka
+    networks: 
+      kafka_net:
