--- a/postgresql/docker-compose-12.6.yml
+++ b/postgresql/docker-compose-12.6.yml
@@ -1,15 +1,15 @@
 version: "3.1"
 services: 
   postgres:
-    image: postgres:12.6
+    image: postgres:12.6-alpine
     container_name: postgres-12-6
     environment: 
       POSTGRES_PASSWORD: pgadmin
-      PGDATA: /var/lib/postgresql/data/pgdata
+      PGDATA: /var/lib/postgresql/data/
     ports:
       - "5432:5432"
     volumes: 
-      - pgdata-126:/var/lib/postgresql/data/pgdata
+      - pg_data-126:/var/lib/postgresql/data
 volumes: 
-  pgdata-126:
+  pg_data-126:
     driver: local
